creusot/tests/should_fail/prusti/invalid_state/at_post_logic.rs
extern crate creusot_contracts;
use creusot_contracts::prusti_prelude::*;

#[logic]
fn test(x: u32) -> u32 {
    at_post(x)
}
