creusot/tests/should_fail/prusti/invalid_state/at_post_logic.stderr
error[creusot]: 'post can only be used in specifications of program functions
 --> at_post_logic.rs:6:5
  |
6 |     at_post(x)
  |     ^^^^^^^^^^

error: aborting due to previous error

